# Spectra-Normalization-Tool

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/usage/: configuration.rst  contribution.rst  installation.rst  quickstart.ipynb
examples/: normalize_spectra.ipynb
src/: anchors.csv  config.py  proj_functions.py  snt.py
src/SNT/: SNT_configs.py  __init__.py  alphashape.py  configs.py  interpolators.py  penalty.py  proj_functions.py  smooth.py  snt.py  snt_interfaces.py
src/SNT/utils/: SNT_configs.py  configs.py  exceptions.py  json_compatible.py  parameter_validators.py
tests/: test_configsHolder.py  test_parameter_validation.py
