[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SNT"
description = "Tool to normalize stellar spectra"
readme = "README.rst"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.1.0"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools]
package-dir = {"" = "src"}
