[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SNT"
description = "Tool to normalize stellar spectra"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.1.0"
dependencies = [
    "astropy>=5.2.2",
    'importlib-metadata; python_version<"3.8"',
    "loguru>=0.6.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "tabletexifier>=0.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint]
select = ["ALL"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "sphinx-book-theme>=0.0.39",
    "sphinx>=7.1.2",
    "nbsphinx>=0.9.6",
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 120
